--- a/src/app/view/log-in/log-in.component.html
+++ b/src/app/view/log-in/log-in.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="app-header">
-  <div><a href="#" target="_blank" class="positronx">Websalepage</a></div>
+  <div><a href="/" target="_blank" class="positronx">Websalepage</a></div>
   <span class="nav-tool-items positronx">
     <a mat-button routerLink="/login" routerLinkActive="active">Log in</a>
     <a
