--- a/src/app/view/user-sale-page/user-sale-page.component.html
+++ b/src/app/view/user-sale-page/user-sale-page.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <mat-card class="card">
     <mat-card-actions>
-      <div [innerHTML]="htmlcode"></div>
+      <div [innerHTML]="htmlcodeservice"></div>
+      <div [innerHTML]="htmlcodeproduct"></div>
+      <div [innerHTML]="htmlcodesalepage"></div>
+      <div [innerHTML]="htmlcodeabout"></div>
+      <div [innerHTML]="htmlcodecontact"></div>
     </mat-card-actions>
   </mat-card>
 </div>
