--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -10,7 +10,7 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <app-side-nav></app-side-nav>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content style="background-color: #DBE5DE;">
     <mat-toolbar class="admin-header">
       <button
         type="button"
@@ -20,7 +20,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      Admin Page
+      {{user}} Page
       <span class="toolbar-spacer"></span>
       <button mat-button (click)="gotohome()">
         <mat-icon
