--- a/src/app/view/admin/homepage/homepage.component.scss
+++ b/src/app/view/admin/homepage/homepage.component.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
   width: 100%;
   background-color: #DBE5DE
 }
@@ -38,4 +37,17 @@
 }
 table {
   width: 100%;
+}
+.example-headers-align .mat-expansion-panel-header-title,
+.example-headers-align .mat-expansion-panel-header-description {
+  flex-basis: 0;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-form-field + .mat-form-field {
+  margin-left: 8px;
 }
