--- a/src/app/view/admin/setting/setting.component.html
+++ b/src/app/view/admin/setting/setting.component.html
@@ -1,1 +1,12 @@
-<p>setting works!</p>
+<div class="container">
+  <mat-card class="card-container">
+    <mat-card-header>
+      <mat-card-title>
+        Setting LOGO
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+    </mat-card-content>
+  </mat-card>
+  </div>
+
