--- a/src/app/components/homepage/editor/editor.component.html
+++ b/src/app/components/homepage/editor/editor.component.html
@@ -13,7 +13,7 @@
   </mat-card>
   <email-editor></email-editor>
   <button
-    (click)="saveDesign('contect')"
+    (click)="saveDesign()"
     class="fab-bottom-right"
     color="primary"
     mat-fab
