--- a/src/app/view/admin/salepage/salepage.component.html
+++ b/src/app/view/admin/salepage/salepage.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <mat-card class="card-container">
     <mat-list>
       <h3 mat-subheader>Member</h3>
