--- a/src/app/view/admin/salepage/salepage.component.scss
+++ b/src/app/view/admin/salepage/salepage.component.scss
@@ -16,9 +16,8 @@
   align-self: stretch;
 }
 .card-container{
-  height: 90%;
-  width: 90%;
-  margin: 10px;
+  height: auto;
+  width: 100%;
 }
 .list-container{
   height: 90%;
