--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -7,24 +7,11 @@
     mode="side"
     opened="true"
   >
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-toolbar color="primary"><img src="../../../assets/img/logo-small.png" alt="logo" style="height: 50px; width: 50px;"></mat-toolbar>
     <app-side-nav></app-side-nav>
   </mat-sidenav>
-  <mat-sidenav-content style="background-color: #DBE5DE;">
+  <mat-sidenav-content >
     <mat-toolbar class="admin-header">
-      <!-- <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-      > -->
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-      >
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
       {{user}} Page
       <span class="toolbar-spacer"></span>
       <button mat-button (click)="gotohome()">
