--- a/src/app/view/admin/checkregister/checkregister.component.scss
+++ b/src/app/view/admin/checkregister/checkregister.component.scss
@@ -1,25 +1,6 @@
-.container{
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  background-color: #DBE5DE
-}
-.content{
-  padding: 15px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex: 1;
-  align-items: center;
-  align-self: stretch;
-}
 .card-container{
-  height: 90%;
-  width: 90%;
-  margin: 10px;
+  height: auto;
+  width: 100%;
 }
 .mat-form-field {
   font-size: 14px;
