--- a/src/app/view/admin/homepage/homepage.component.html
+++ b/src/app/view/admin/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <mat-accordion class="example-headers-align list-container">
     <mat-expansion-panel
       [expanded]="step === 0"
