--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -23,9 +23,8 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container> -->
-<div class="container">
-  <div class="row">
-    <div class="col-6 col-md-6" style="background-color: red;">MD6</div>
-    <div class="col-6 col-md-6" style="background-color: yellow;">MD6</div>
-  </div>
+<app-default></app-default>
+<div class="content">
+  <h1>home Sale Page!</h1>
 </div>
+
