--- a/src/app/view/log-in/log-in.component.html
+++ b/src/app/view/log-in/log-in.component.html
@@ -1,43 +1,52 @@
-<mat-toolbar class="app-header">
-  <div><a href="/" target="_blank" class="positronx">Websalepage</a></div>
+<mat-toolbar>
+  <div>
+    <a href="#" target="_blank" class="positronx navbar-brand">
+      <img
+        src="../../../assets/img/logo-small.png"
+        width="auto"
+        height="50"
+        alt=""
+      />
+    </a>
+  </div>
   <span class="nav-tool-items positronx">
-    <a mat-button routerLink="/login" routerLinkActive="active">Log in</a>
     <a
       mat-button
-      mat-raised-button
-      routerLink="/register"
+      style="color: gray;"
+      routerLink="/"
       routerLinkActive="active"
-      >Register</a
+      ><mat-icon aria-hidden="false" aria-label="Example home icon" class="icon"
+        >close</mat-icon
+      ></a
     >
   </span>
 </mat-toolbar>
-
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div class="container">
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title>Log in</mat-card-title>
+      <mat-card-title style="color: #343350"><h1>Log In</h1></mat-card-title>
+      <mat-card-subtitle style="color: #343350"
+        >New to SalePage? <a href="/register">Create an Account</a>
+      </mat-card-subtitle>
     </mat-card-header>
-
-    <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <mat-card-content>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username" formControlName="username" />
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password" formControlName="password"/>
-        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Username</mat-label>
+          <input  matInput  placeholder="Username" formControlName="username" >
+       </mat-form-field>
+       <mat-form-field appearance="outline">
+          <mat-label>Password</mat-label>
+          <input  matInput  placeholder="Password" formControlName="password">
+       </mat-form-field>
       </mat-card-content>
-      <button
-        mat-stroked-button
-        color="accent"
-        [disabled]="loading"
-        class="btn-block"
-      >
-      <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-        Log in
+      <button class="button"  mat-raised-button color="accent" [disabled]="loading">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        LOG IN
       </button>
       <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
     </form>
+    <a href="">Forgot Password?</a>
   </mat-card>
 </div>
+
