--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,116 +1,37 @@
-@import '~material-bottom-nav';
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+@import "~material-bottom-nav";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
+html, body{
+  height: 100%
+}
+h1 {
+  text-align: center;
+}
 body {
-  background-color:#97B1AA;
+  background-color: #97b1aa;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
-  font-family: 'Roboto', sans-serif;
-}
-
-.app-header {
-  justify-content: space-between;
-  background-color: #5BB9A7;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
-}
-
-.login-wrapper {
   height: 100%;
-}
-
-.positronx {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.box {
-  position: relative;
-  top: 0;
-  opacity: 1;
-  float: left;
-  padding: 60px 50px 40px 50px;
-  width: 100%;
-  background: #fff;
-  border-radius: 10px;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  z-index: 5;
-  max-width: 330px;
-}
-
-.box.back {
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  top: -20px;
-  opacity: .8;
-  z-index: -1;
-}
-
-.box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, .6);
-  left: 0;
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  z-index: -1;
-}
-
-.login-wrapper .example-form {
-  min-width: 100%;
-  max-width: 300px;
-  width: 100%;
-}
-
-.login-wrapper .example-full-width,
-.login-wrapper .btn-block {
-  width: 100%;
-}
-
-.login-wrapper mat-card-header {
-  text-align: center;
-  width: 100%;
-  display: block;
-  font-weight: 700;
-}
-
-.login-wrapper mat-card-header mat-card-title {
-  font-size: 30px;
   margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
-
-.login-wrapper .mat-card {
-  padding: 40px 70px 50px;
+a {
+  text-decoration: none !important;
 }
-
-.login-wrapper .mat-stroked-button {
-  border: 1px solid currentColor;
-  line-height: 54px;
-  background: #FFF7FA;
+.a:hover {
+  color: #5bb9a7;
 }
-
-.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-  padding: 0.8375em 0;
-}
-.bottom-nav {
-  @include bottom-nav($background-color: #5BB9A7, $active-color: #FFFFFF, $inactive-color: #E0E0E0, $hide-inactive-labels: true);
+.mat-toolbar {
+  justify-content: space-between;
+  background-color: #8e6799;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
