--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -25,6 +25,8 @@
 </mat-sidenav-container> -->
 <app-default></app-default>
 <div class="content">
-  <h1>home Sale Page!</h1>
+  <div [innerHTML]="htmlcodeproduct"></div>
+  <div [innerHTML]="htmlcodesalepage"></div>
+  <div [innerHTML]="htmlcodeabout"></div>
+  <div [innerHTML]="htmlcodecontact"></div>
 </div>
-
