--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -38,7 +38,7 @@ mat-sidenav {
 }
 .content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
   }
